# test-autorag

./: .env  autorag-test.md  crawler.py  logger.py  main.py  pyproject.toml  settings.py  upload_data.py
crawled_html/: page_0e2aac14-04a5-4008-a644-102d35e2aa13.html  page_29da8a49-3367-4bd4-b249-69dfda74e8d2.html  page_43a672a6-cdbc-45f5-b688-8d6262a2a593.html  page_5d825f24-c8ed-4ae6-a041-86609546c293.html  page_5fab2421-6ecb-45fd-b881-a2597ea65100.html  page_7881ebfe-ae72-466f-99db-70355a301797.html  page_94f92c72-e7e1-4fb1-b0d0-051f13556fa2.html
